--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "morgan": "^1.9.1",
     "multer": "^1.4.2",
     "passport": "^0.4.1",
+    "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0"
   },
   "devDependencies": {
